trying to fix weird height issues on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -72,12 +72,16 @@
   }
   body {
     @apply bg-background text-foreground;
+    overscroll-behavior: none;
+  }
+  ::-webkit-scrollbar {
+    display: none;
   }
 }
 
 dialog {
-  max-width: 100vw;
-  max-height: 100vh;
+  max-width: 100svw;
+  max-height: 100svh;
 }
 
 svg.spinner {
